@@ -7,11 +7,10 @@ inc/Module/Install/Makefile.pm
 inc/Module/Install/Metadata.pm
 inc/Module/Install/Win32.pm
 inc/Module/Install/WriteAll.pm
-lib/WWW/Search/AltaVista/Careers.pm
 lib/WWW/Search/AOL/Classifieds/Employment.pm
 lib/WWW/Search/Brassring.pm
 lib/WWW/Search/Dice.pm
-lib/WWW/Search/HeadHunter.pm
+lib/WWW/Search/Headhunter.pm
 lib/WWW/Search/Monster.pm
 lib/WWW/Search/Yahoo/Classifieds/Employment.pm
 Makefile.PL
