@@ -15,4 +15,4 @@ no_index:
 requires: 
   WWW::Search: 0
   perl: 5.004
-version: 2.024
+version: 2.025
