@@ -1,9 +1,9 @@
 
-# $Id: Makefile.PL,v 2.7 2007/06/10 00:18:43 Daddy Exp $
+# $Id: Makefile.PL,v 2.8 2007/06/10 01:07:00 Daddy Exp $
 
 use inc::Module::Install;
 name('WWW-Search-Jobs');
-version(2.024);
+version(2.025);
 author('Martin Thurn <mthurn@cpan.org>');
 abstract('Query job-related web search engines');
 license('perl');
